# ButterPaper

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MANIFEST.md  PRD.md  PROMPT.md  QUICKSTART.md  README.md  REFACTOR_INDEX.md  REFACTOR_SUMMARY.md  ralph.yml  run-ralphy.sh  run.sh
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml  update-homebrew-tap.yml
.ralph/: current-events  events-20260121-151110.jsonl  events-20260121-153117.jsonl  events-20260122-053434.jsonl  events-20260122-060236.jsonl  events-20260122-062347.jsonl  events-20260122-074312.jsonl  events-20260123-013212.jsonl  events-20260123-043232.jsonl  events.jsonl  scratchpad.md
.ralphy/: config.yaml  progress.txt
crates/app/: Cargo.toml
crates/app/src/: clipboard.rs  display_info.rs  main.rs  main_egui.rs  menu.rs  recent_files.rs  startup_profiler.rs
crates/cache/: Cargo.toml
crates/cache/src/: config.rs  disk.rs  gpu.rs  lib.rs  memory_budget.rs  ram.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: cli_contract.rs
crates/cli/tests/snapshots/: cli_contract__cli_info_small_pdf.snap
crates/core/: Cargo.toml
crates/core/src/: annotation.rs  annotation_import.rs  checkpoint.rs  csv_export.rs  deferred.rs  document.rs  font_bridge.rs  lib.rs  loader.rs  manipulation.rs  measurement.rs  ocr.rs  page_switch.rs  pdf_export.rs  persistence.rs  preview.rs  progressive_ocr.rs  progressive_page.rs  scale_detection.rs  snapping.rs  text_edit.rs  text_layer.rs  text_layout.rs  write_coordinator.rs
crates/doc-model/: Cargo.toml
crates/doc-model/src/: lib.rs
crates/gpui-app/: COMPONENTS.md  Cargo.toml  build.rs
crates/gpui-app/.cargo/: config.toml
crates/gpui-app/assets/: butterpaper-icon.icns
crates/gpui-app/assets/app-icons/: butterpaper-icon-beta.icns  butterpaper-icon.icns
crates/gpui-app/assets/icons/: NOTICE.md
crates/gpui-app/assets/macos/: Assets-beta.car  Assets.car  README.md
crates/gpui-app/src/: app_update.rs  assets.rs  benchmark.rs  cache.rs  element_registry.rs  icons.rs  lib.rs  macos.rs  main.rs  preview_cache.rs  process_memory.rs  settings.rs  sidebar.rs  theme.rs  theme_updater.rs  ui.rs  ui_preferences.rs  viewport.rs
crates/gpui-app/src/app/: document.rs  editor.rs  menus.rs  mod.rs
crates/gpui-app/src/cli/: args.rs  automation.rs  mod.rs
crates/gpui-app/src/components/: button.rs  button_like.rs  card.rs  chrome.rs  context_menu.rs  divider.rs  dropdown.rs  icon.rs  icon_button.rs  input.rs  mod.rs  nav_item.rs  popover_menu.rs  radio.rs  scrollbar.rs  segmented_control.rs  setting_item.rs  settings_group.rs  settings_row.rs  slider.rs  tab.rs  tab_bar.rs  text_button.rs  toggle_switch.rs  tooltip.rs
crates/gpui-app/src/styles/: mod.rs  spacing.rs  typography.rs  units.rs
crates/gpui-app/src/window/: manager.rs  mod.rs  screenshot.rs
crates/gpui-app/src/workspace/: mod.rs  persistence.rs  types.rs  window_manager.rs
crates/pdf-engine/: Cargo.toml
crates/pdf-engine/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: font_info.rs  lib.rs  pdf.rs  progressive.rs  tile.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: cancel.rs  frame_budget.rs  io.rs  lib.rs  priority.rs  scheduler.rs  viewport.rs  worker.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/src/: lib.rs  main.rs  state.rs
crates/tauri-app/src/commands/: pdf.rs
crates/ui/: Cargo.toml
crates/ui/src/: calibration_dialog.rs  compositor.rs  error_dialog.rs  input.rs  lib.rs  note_popup.rs  renderer.rs  scene.rs  search_bar.rs  text_selection.rs  theme.rs  thumbnail.rs  toolbar.rs
crates/ui/src/gpu/: metal.rs  mod.rs
crates/update-core/: Cargo.toml
crates/update-core/src/: lib.rs
crates/updater/: Cargo.toml
crates/updater/src/: main.rs
crates/viewer-core/: Cargo.toml
crates/viewer-core/src/: lib.rs
docs/: README.md  index.html
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ErrorDialog.tsx  SearchBar.tsx  Sidebar.tsx  TitleBar.tsx  Toolbar.tsx  Viewport.tsx
frontend/src/hooks/: usePdfState.ts
frontend/src/lib/: tauri.ts
planning/: AUTO_UPDATE_SYSTEM.md  ICON_PIPELINE_TAHOE.md  INITIAL_BUILD_CHECKLIST.md  LQ_RENDERING_SYSTEM_PLAN.md  MIGRATION_UI_UX_PLAN.md  REAL_UI_FOUNDATION_PLAN.md  UI_STANDARDIZATION_NOTES.md  V0_1_RELEASE_READINESS.md
scripts/: apply_macos_tahoe_bundle_icons.sh  bench_all_slides.sh  build-app.sh  build-gpui.sh  bundle_macos_tahoe.sh  capture-window.sh  capture_editor_toolbar_visuals.sh  capture_settings_visuals.sh  check_control_sizes.sh  compare_visuals.sh  generate_app_icons.py  measure.py  measure.sh  prepare_macos_tahoe_icons.sh  promote_visual_baselines.sh  release_notes_from_changelog.py  run-gui-tests.sh  run-tests.sh  setup-pdfium.sh  setup_pdfium.sh  test-all.sh  test-list-annotations.sh  test-multiple-pdfs.sh  test-search.sh  test-theme-switch.sh  validate_app_icons.py
scripts/release/: update_homebrew_tap_casks.py  windows_installer.nsi
tests/fixtures/: README.md  generate_fixtures.py
tests/perf/: README.md
tests/ui/: README.md
tests/visual/: README.md
tools/xcap/: Cargo.toml
tools/xcap/src/: main.rs
