[workspace]
resolver = "2"
members = [
    "crates/render",
    "crates/gpui-app",
    "tools/xcap",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/apotenza92/pdf-editor"

[workspace.dependencies]
pdf-editor-render = { path = "crates/render" }
