[workspace]
resolver = "2"
members = [
  "crates/render",
  "crates/gpui-app",
  "crates/update-core",
  "crates/updater"
]
default-members = [
  "crates/gpui-app"
]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/apotenza92/ButterPaper"

[workspace.dependencies]
butterpaper-render = { path = "crates/render" }
