[package]
name = "pdf-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pdf-editor-ui = { path = "../ui" }

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"
raw-window-handle = "0.6"
metal = "0.29"
cocoa = "0.26"
objc = "0.2"
core-graphics-types = "0.1"
