[package]
name = "butterpaper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "butterpaper-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
pdf-engine = { path = "../pdf-engine" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
tempfile.workspace = true
