[package]
name = "pdf-editor-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pdf_editor_gpui"
path = "src/lib.rs"

[[bin]]
name = "pdf-editor"
path = "src/main.rs"

[[bin]]
name = "test-enigo"
path = "src/bin/test_enigo.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.180.4" }
pdf-editor-render.workspace = true
image = "0.25"
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"
dirs = "5.0"
xcap = "0.8"
enigo = "0.6"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"
dispatch = "0.2"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSAppearance", "NSResponder"] }
objc2-foundation = "0.2"
