[package]
name = "butterpaper"
default-run = "butterpaper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[features]
# Build/packaging channel. Used for channel-specific branding (e.g., app icons).
beta = []

[package.metadata.bundle]
name = "ButterPaper"
identifier = "com.apotenza92.butterpaper"
icon = [
    "assets/app-icons/butterpaper-icon.icns",
    "assets/app-icons/butterpaper-icon.ico",
    "assets/app-icons/butterpaper-icon-32.png",
    "assets/app-icons/butterpaper-icon-128.png",
    "assets/app-icons/butterpaper-icon-256.png",
    "assets/app-icons/butterpaper-icon-512.png",
]
resources = ["assets/macos/Assets.car"]

[lib]
name = "butterpaper_gpui"
path = "src/lib.rs"

[[bin]]
name = "butterpaper"
path = "src/main.rs"

[[bin]]
name = "test-enigo"
path = "src/bin/test_enigo.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.180.4" }
butterpaper-render.workspace = true
image = "0.25"
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"
dirs = "5.0"
xcap = "0.8"
enigo = "0.6"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"
dispatch = "0.2"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSAppearance", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.2", features = ["NSData", "NSProcessInfo"] }

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.180.4", features = ["test-support"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
