[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
directories.workspace = true
doc-model = { path = "../doc-model" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
