[package]
name = "pdf-editor-tauri"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdf-editor-tauri"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-editor-render = { path = "../render" }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
