[package]
name = "pdf-editor-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pdf-editor-cache = { path = "../cache" }
pdf-editor-render = { path = "../render" }
pdf-editor-scheduler = { path = "../scheduler" }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
cocoa = "0.26"
core-graphics-types = "0.2"
objc = "0.2"
