[package]
name = "butterpaper-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "butterpaper-updater"
path = "src/main.rs"

[dependencies]
butterpaper-update-core = { path = "../update-core" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"
thiserror = "1.0"
tempfile = "3.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation","Win32_System_Threading","Win32_UI_Shell"] }
